# ai-store

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
crates/ai-store-core/: Cargo.toml
crates/ai-store-core/src/: backend.rs  builder.rs  dispatcher.rs  error.rs  event.rs  facade.rs  gate.rs  id.rs  kind_gate.rs  lib.rs  patch.rs  sink.rs  state.rs  upcaster.rs  upcasting_backend.rs
crates/ai-store-core/src/facade/: labels.rs  lifecycle.rs  read.rs  write.rs
crates/ai-store-core/tests/: backend_default_impl.rs  kind_gate.rs
crates/ai-store-fileproj/: Cargo.toml
crates/ai-store-fileproj/src/: combined.rs  lib.rs  projection.rs
crates/ai-store-fileproj/tests/: combined.rs  projection.rs
crates/ai-store-mem/: Cargo.toml
crates/ai-store-mem/src/: cache.rs  checkpoint.rs  event.rs  lib.rs
crates/ai-store-mem/tests/: conformance.rs  facade.rs
crates/ai-store-sqlite/: Cargo.toml
crates/ai-store-sqlite/examples/: migrate_from_json.rs
crates/ai-store-sqlite/src/: backend.rs  driver.rs  lib.rs  maintenance.rs  migration.rs  query.rs  read_model.rs  store.rs
crates/ai-store-sqlite/tests/: conformance.rs  facade.rs  failure_visibility.rs  maintenance.rs  multi_writer.rs  read_model.rs  sqlite_store.rs
crates/ai-store-sync/: Cargo.toml
crates/ai-store-sync/examples/: blocking_file_sink.rs
crates/ai-store-sync/src/: lib.rs  sink.rs
crates/ai-store-sync/tests/: blocking.rs  blocking_sink.rs
