[workspace]
resolver = "2"
members = [
    "crates/ai-store-core",
    "crates/ai-store-mem",
    "crates/ai-store-sqlite",
    "crates/ai-store-fileproj",
    "crates/ai-store-sync",
]

[workspace.package]
version = "0.4.0"
edition = "2021"
rust-version = "1.77"
license = "MIT OR Apache-2.0"
authors = ["Yutaka Nishimura <ytk.nishimura@gmail.com>"]
repository = "https://github.com/ynishi/ai-store"
homepage = "https://github.com/ynishi/ai-store"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json-patch = "4"
thiserror = "1"
uuid = { version = "1", features = ["v7", "serde"] }
time = { version = "0.3", features = ["serde"] }
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "rt", "macros"] }
