[package]
name = "ai-store-core"
description = "Facade, SPI traits, and core types for the ai-store family (append-only event store with diff-based history)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
json-patch = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
# Dev-only cycle (ai-store-mem depends on ai-store-core normally): Cargo
# permits dev-dependency cycles since they only participate in test/example
# builds, never the library build itself. Used by the KindGate end-to-end
# test to exercise the gate through a real `Store` without pulling in a
# third crate.
ai-store-mem = { path = "../ai-store-mem" }
