[package]
name = "ai-store-fileproj"
description = "File-writing ProjectionSink for the ai-store family (draft.md / label.md layout)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
ai-store-core = { path = "../ai-store-core", version = "0.6.0" }
async-trait = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs"] }

[dev-dependencies]
ai-store-mem = { path = "../ai-store-mem", version = "0.6.0" }
json-patch = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs"] }
