[package]
name = "ai-store-mem"
description = "In-memory EventBackend and CacheBackend for the ai-store family (test and lightweight use)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
ai-store-core = { path = "../ai-store-core", version = "0.9.0" }
async-trait = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
json-patch = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
