[package]
name = "ai-store-sync"
description = "Blocking (sync) facade over ai-store-core::Store for synchronous consumers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
ai-store-core = { path = "../ai-store-core", version = "0.8.0" }
async-trait = { workspace = true }
serde_json = { workspace = true }
json-patch = { workspace = true }
tokio = { version = "1", features = ["rt", "sync"] }

[dev-dependencies]
ai-store-mem = { path = "../ai-store-mem", version = "0.8.0" }
tempfile = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync"] }
